@@ -1,3 +1,8 @@
+
+What's new in version 0.96:
+
+  Minor bug fixes only.
+
 What's new in version 0.95:
 
   Flushing out the deferred-write buffer is now done in a single pass,
